--- a/style.css
+++ b/style.css
@@ -33,8 +33,11 @@ footer{
     color: #FFFFFF;
 }
 
-.social-links{
-    margin-top: 10px;
+.social-links >a {
+    margin-top: 0 10px;
+    color: #007bff;
+    text-decoration: none;
+    font-weight: bold;
 }
 
 .social-links > a:hover {
